test/test_units/test_kclvm/test_types/invalid_test_data/subscript/subscript_1.k
dataDict = {key: "value"}
keyType = [1]
dataKeyValue: str = dataDict[keyType]
